Fix card shadow on firefox
Fix card shadow on firefox

--- a/cards.css
+++ b/cards.css
@@ -11,6 +11,7 @@
     position: absolute;
     overflow: visible;
     transform: translate(-57px,-50%);
+    transform-style: preserve-3d;
     transition: none;
 }
 
